integration_tests/codegen_fail/fail/union/trait_fail_infer_context.stderr
error[E0277]: the trait bound `CustomContext: FromContext<SubContext>` is not satisfied
   --> fail/union/trait_fail_infer_context.rs:3:1
    |
3   | #[graphql_union]
    | ^^^^^^^^^^^^^^^^ expected an implementor of trait `FromContext<SubContext>`
    |
note: required by `juniper::FromContext::from`
   --> $WORKSPACE/juniper/src/executor/mod.rs
    |
    |     fn from(value: &T) -> &Self;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the attribute macro `graphql_union` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> fail/union/trait_fail_infer_context.rs:3:1
  |
3 | #[graphql_union]
  | ^^^^^^^^^^^^^^^^ expected struct `CustomContext`, found struct `SubContext`
  |
  = note: expected reference `&CustomContext`
             found reference `&SubContext`
  = note: this error originates in the attribute macro `graphql_union` (in Nightly builds, run with -Z macro-backtrace for more info)
